# serializer version: 1
# name: test_frame_when_before_hook_running_does_show_spinner
  '''
  iterate #1 · session test-session · 0s elapsed
  ⠋ before hook
  ○ prepare
  ○ passes
  ○ judge (3 metrics · geomean primary)
  ○ confirm (only if a gating metric regresses)
  ○ record (then after hook)
  '''
# ---
# name: test_frame_when_both_worktrees_prepared_does_show_elapsed
  '''
  iterate #1 · session test-session · 5s elapsed
  ✓ prepared 5s
  ○ passes
  ○ judge (3 metrics · geomean primary)
  ○ confirm (only if a gating metric regresses)
  ○ record
  '''
# ---
# name: test_frame_when_compact_layout_does_show_single_row
  '⠋ sampling                                            0% · A · 00:00/--:--'
# ---
# name: test_frame_when_header_before_first_pass_completes_does_show_elapsed_without_eta
  '''
  iterate #1 · session test-session · 10s elapsed
  ✓ prepared
  ⠧ sampling · baseline                                           0/10 00:03/--:--
  ○ judge (3 metrics · geomean primary)
  ○ confirm (only if a gating metric regresses)
  ○ record
  '''
# ---
# name: test_frame_when_initial_does_show_all_nodes_pending
  '''
  iterate #3 · session abc-123
  ○ prepare
  ○ passes
  ○ judge (4 metrics · geomean primary)
  ○ confirm (only if a gating metric regresses)
  ○ record
  '''
# ---
# name: test_frame_when_judge_alerting_and_confirm_running_does_show_bar
  '''
  iterate #1 · session test-session · 6s elapsed
  ○ prepare
  ○ passes
  ! judged +2.5% on geomean · 1 regressed: latency
  ⠴ confirming 1 metric · baseline                                0/10 00:06/--:--
  ○ record
  '''
# ---
# name: test_frame_when_judge_finished_after_started_does_show_elapsed
  '''
  iterate #1 · session test-session · 00:10/00:15
  ✓ prepared
  ○ passes
  ✓ judged -3.2% on geomean · 1 regressed: latency 4s
  ○ confirm (only if a gating metric regresses)
  ○ record
  '''
# ---
# name: test_frame_when_judge_finished_does_show_delta_and_regressed
  '''
  iterate #1 · session test-session · 00:06/00:11
  ✓ prepared
  ○ passes
  ✓ judged -3.2% on geomean · 2 regressed: latency, throughput
  ○ confirm (only if a gating metric regresses)
  ○ record
  '''
# ---
# name: test_frame_when_judge_finished_no_regressions_does_drop_confirm_and_show_verdict
  '''
  iterate #1 · session test-session · 00:06/00:11
  ✓ prepared
  ○ passes
  ✓ judged -2.0% on geomean · no gating regression
  ○ record
  '''
# ---
# name: test_frame_when_judge_started_does_show_running_with_elapsed
  '''
  iterate #1 · session test-session · 00:09/00:14
  ✓ prepared
  ○ passes
  ⠴ judging 3 metrics · geomean primary 3s
  ○ confirm (only if a gating metric regresses)
  ○ record
  '''
# ---
# name: test_frame_when_passes_mid_run_does_show_bar_count_and_clock
  '''
  iterate #1 · session test-session · 01:04/02:24
  ✓ prepared
  ⠧ sampling · baseline ━━━━━━━━                                  2/10 01:03/02:23
  ○ judge (3 metrics · geomean primary)
  ○ confirm (only if a gating metric regresses)
  ○ record
  '''
# ---
# name: test_frame_when_recorded_does_show_outcome_suggested
  '''
  iterate #3 · session test-session · 0s elapsed
  ○ prepare
  ○ passes
  ○ judge (3 metrics · geomean primary)
  ○ confirm (only if a gating metric regresses)
  ✓ recorded improved suggested
  '''
# ---
# name: test_frame_when_recorded_with_checks_cmd_does_show_gymrat_keep
  '''
  iterate #3 · session test-session · 0s elapsed
  ○ prepare
  ○ passes
  ○ judge (3 metrics · geomean primary)
  ○ confirm (only if a gating metric regresses)
  ✓ recorded unsettled suggested — checks (npm run check && npm test) run at gymrat keep
  '''
# ---
# name: test_plain_when_confirm_finished_does_print_timestamped_line
  '[00:00:05] confirm 0/2 · regressions reproduced'
# ---
# name: test_plain_when_judge_finished_does_print_timestamped_line
  '[00:00:00] judge -2.0% · 3 improve/noise'
# ---
# name: test_plain_when_passes_done_does_print_timestamped_line
  '[00:00:21] passes done (20s)'
# ---
# name: test_plain_when_prepare_done_does_print_timestamped_line
  '[00:00:05] prepare baseline done (5s)'
# ---
# name: test_plain_when_recorded_does_print_timestamped_line
  '[00:00:00] recorded improved suggested'
# ---
